--- a/ReHouse.FrontEnd/Views/Email/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Email/Index.cshtml
@@ -3,20 +3,24 @@
 @section scripts {
     @Scripts.Render("~/Scripts/jqueryval")
 }
-
+</div>
 <div class="navigation_string">
-    <div class="way">
-        <a href="/">Главная</a>
-        <pre> </pre>
-        <p>/</p>
-        <pre> </pre>
-        <a href="/email/">Обратный звонок</a>
+    <div class="container">
+        <div class="way">
+            <a href="/">Главная</a>
+            <pre> </pre>
+            <a>/</a>
+            <pre> </pre>
+            <a href="/email/">Обратный звонок</a>
+        </div>
     </div>
 </div>
-<div class="managers">
-    <h2>Свяжитесь с нами, заполнив форму ниже</h2>
+<div class="container">
 
-    <div class="form">
-        @Html.Partial("Partial/_emailPartial", Model)
+    <div class="managers">
+        <h2>Свяжитесь с нами, заполнив форму ниже</h2>
+
+        <div class="form">
+            @Html.Partial("Partial/_emailPartial", Model)
+        </div>
     </div>
-</div>
