--- a/ReHouse.FrontEnd/Views/Rent/Homestead.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Homestead.cshtml
@@ -6,15 +6,20 @@
 }
 <span class="none">
 
+    </div>
     <div class="navigation_string">
-        <div class="way">
-            <a href="/">Главная</a>
-            <pre> </pre>
-            <p>/</p>
-            <pre> </pre>
-            <a href="/rent/homestead/">Снять участок</a>
+        <div class="container">
+            <div class="way">
+                <a href="/">Главная</a>
+                <pre> </pre>
+                <a>/</a>
+                <pre> </pre>
+                <a href="/rent/homestead/">Снять участок</a>
+            </div>
         </div>
     </div>
+    <div class="container">
+
 </span>
 <div class="h2novostroy"><h2>Аренда участков в Одессе</h2></div>
 
