--- a/ReHouse.FrontEnd/Views/Sale/Commerce.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Commerce.cshtml
@@ -5,16 +5,20 @@
     List<PageText> texts = ViewBag.PageTexts as List<PageText>;
 }
 <span class="none">
-
+    </div>
     <div class="navigation_string">
-        <div class="way">
-            <a href="/">Главная</a>
-            <pre> </pre>
-            <p>/</p>
-            <pre> </pre>
-            <a href="/sale/commerce/">Купить коммерческую</a>
+        <div class="container">
+            <div class="way">
+                <a href="/">Главная</a>
+                <pre> </pre>
+                <a>/</a>
+                <pre> </pre>
+                <a href="/sale/commerce/">Купить коммерческую</a>
+            </div>
         </div>
     </div>
+    <div class="container">
+
 </span>
 <div class="h2novostroy"><h2>Продажа коммерческой в Одессе</h2></div>
 
