--- a/ReHouse.FrontEnd/Content/mobile.css
+++ b/ReHouse.FrontEnd/Content/mobile.css
@@ -303,7 +303,9 @@
 }
 */
 @media(max-width:768px) {
-
+    #sliderFrame {
+    display:none;
+}
     .h2novostroy .favorite {
         position: absolute;
         top: 37px;
@@ -357,8 +359,6 @@
         }
 
     body {
-        background-color: #0a2a5d;
-        background-image: none;
     }
 
     body {
@@ -493,7 +493,6 @@
         max-width: 768px;
         width: 100%;
         height: 100px;
-        background-color: #0a2a5d;
     }
 
     .header_mobile .header .contactinfo #fav1 {
