--- a/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
@@ -5,15 +5,19 @@
     List<PageText> texts = ViewBag.PageTexts as List<PageText>;
 }
 <span class="none">
+    </div>
     <div class="navigation_string">
-        <div class="way">
-            <a href="/">Главная</a>
-            <pre> </pre>
-            <p>/</p>
-            <pre> </pre>
-            <a href="/newbuilding/">Новострои</a>
+        <div class="container">
+            <div class="way">
+                <a href="/">Главная</a>
+                <pre> </pre>
+                <a>/</a>
+                <pre> </pre>
+                <a href="/newbuilding/">Новострои</a>
+            </div>
         </div>
     </div>
+    <div class="container">
 </span>
 <div class="h2novostroy"><h2>Новострои</h2></div>
 <div class="selection">
