--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
@@ -48,115 +48,108 @@
     <div class="header">
         <div class="container" id="container">
             <span class="flex_header">
-                <div class="logo">
-                    <a href="~/Home/Index" id=""><img src="~/Content/images/logo.png" width="350"></a>
-                    <p class="textlogo">Международная риэлторская инвестиционная компания</p>
+                <div class="social">
+                    <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
+                    <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
+                    <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
+                    @*<a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>*@
                 </div>
                 <div class="search">
                     <p>
-                        <form class="form-search" method="get" action="/search/flats" target="_blank">
-                            <input type="text" name="query" placeholder="Введите слово, фразу или id объекта" value="" />
+                        <form class="form-search" method="get" action="/search/flats">
+                            <input type="text" name="query" placeholder="Поиск" value="" />
                             <input type="submit" value="">
                         </form>
                     </p>
                     @if (Session != null && Session["user"] is SessionModel)
-                    {
-                        var session = Session["user"] as SessionModel;
+            {
+                var session = Session["user"] as SessionModel;
 
                         <div class="your_name">
                             <div><p>Ваш логин:</p></div>
                             @if (!String.IsNullOrEmpty(session.User.Login))
                             {
-                                <div class="your_login"><p><a href="~/cabinet/profile" class="">@session.User.Login</a></p></div>
+                                <div class="your_login"><p><a href="/cabinet/profile/" class="">@session.User.Login</a></p></div>
 
                             }
                             else
                             {
-                                <div class="your_login"><p><a href="~/cabinet/profile" class="">@session.User.Email</a></p></div>
+                                <div class="your_login"><p><a href="/cabinet/profile/" class="">@session.User.Email</a></p></div>
                             }
                             <div class="logout"><p>@Html.ActionLink("Выйти", "logout", "authorize")</p></div>
                         </div>
                     }
                 </div>
-
                 <div class="contactinfo">
                     <div class="tel">
-                        <div class="imgtel">
-                            <img src="~/Content/images/tel.png">
-                        </div>
                         <div class="number">
-                            <p>+38093 057 7110</p>
-                            <p>+38048 788 6707</p>
+                            <div><img src="~/Content/images/tel.png" style="width:10px" height="10px"><p>+38093 057 7110</p></div>
+                            <div><img src="~/Content/images/tel.png" style="width:10px" height="10px"><p>+38048 788 6707</p></div>
                         </div>
                     </div>
-                    <div class="social">
-                        <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
-                        <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
-                        <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
-                        @*<a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>*@
-                    </div>
                 </div>
-
                 <div class="feedback">
-                    <a href="~/cart/index" id="fav">Избранное</a>
-                    <a href="~/email/index" id="blink">Обратный звонок</a>
+                    <a href="/cart/" id="fav">Избранное</a>
+                    <!-- <a href="/email/" id="blink">Обратный звонок</a>-->
+                    <a href="/email/" id="popup__toggle" onclick="return false;"><div class="circlephone" style="transform-origin: center;"></div><div class="circle-fill" style="transform-origin: center;"></div><div class="img-circle" style="transform-origin: center;"><div class="img-circleblock" style="transform-origin: center;"></div></div></a>
                 </div>
-
             </span>
         </div>
+
     </div>
-
-
 
     <div id="nav">
         <div class="container" id="container">
             <div class="navigation">
-                <ol>
-                    <li>
-                        <a id="">Покупка</a>
-                        <ol>
-                            @*<li>@Html.ActionLink("Купить квартиру", "flat", "sale")</li>
-                                <li>@Html.ActionLink("Купить дом", "house", "sale")</li>
-                                <li>@Html.ActionLink("Купить участок", "homeStead", "sale")</li>
-                                <li>@Html.ActionLink("Купить коммерческую", "commerce", "sale")</li>*@
-                            <li><a href="~/sale/flat">Купить квартиру</a></li>
-                            <li><a href="~/sale/house">Купить дом</a></li>
-                            <li><a href="~/sale/homestead">Купить участок</a></li>
-                            <li><a href="~/sale/commerce">Купить коммерцию</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a href="#" id="">Аренда</a>
-                        <ol>
-                            @*<li>@Html.ActionLink("Снять квартиру", "flat", "rent")</li>*@
-                            @*<li>@Html.ActionLink("Снять дом", "house", "rent")</li>*@
-                            @*<li>@Html.ActionLink("Снять участок", "homeStead", "rent")</li>*@
-                            <li><a href="~/rent/flat">Снять квартиру</a></li>
-                            <li><a href="~/rent/house">Снять дом</a></li>
-                            @*<li><a href="~/rent/homestead">Снять участок</a></li>*@
-                            <li><a href="~/rent/commerce">Снять коммерцию</a></li>
-                        </ol>
-                    </li>
-                    <li><a href="~/newbuilding/">Новострои</a></li>
-                    <li><a href="~/manager/" id="">Менеджеры</a></li>
-                    <li>
-                        <a href="#" id="">О нас</a>
-                        <ol>
-                            <li><a href="~/home/about">О компании</a></li>
-                            <li><a href="~/vacancy/">Вакансии агенства</a></li>
-                        </ol>
+                <div class="logo">
+                    <a href="/" id=""><img src="~/Content/images/logo.png" width="360"></a>
+                </div>
+                <div class="ool">
+                    <ol>
+                        <li>
+                            <a id="">Покупка</a>
+                            <ol>
+                                @*<li>@Html.ActionLink("Купить квартиру", "flat", "sale")</li>
+                                    <li>@Html.ActionLink("Купить дом", "house", "sale")</li>
+                                    <li>@Html.ActionLink("Купить участок", "homeStead", "sale")</li>
+                                    <li>@Html.ActionLink("Купить коммерческую", "commerce", "sale")</li>*@
+                                <li><a href="/sale/flat/">Купить квартиру</a></li>
+                                <li><a href="/sale/house/">Купить дом</a></li>
+                                <li><a href="/sale/homestead/">Купить участок</a></li>
+                                <li><a href="/sale/commerce/">Купить коммерцию</a></li>
+                            </ol>
+                        </li>
+                        <li>
+                            <a href="#" id="">Аренда</a>
+                            <ol>
+                                @*<li>@Html.ActionLink("Снять квартиру", "flat", "rent")</li>*@
+                                @*<li>@Html.ActionLink("Снять дом", "house", "rent")</li>*@
+                                @*<li>@Html.ActionLink("Снять участок", "homeStead", "rent")</li>*@
+                                <li><a href="/rent/flat/">Снять квартиру</a></li>
+                                <li><a href="/rent/house/">Снять дом</a></li>
+                                @*<li><a href="/rent/homestead/">Снять участок</a></li>*@
+                                <li><a href="/rent/commerce/">Снять коммерцию</a></li>
+                            </ol>
+                        </li>
+                        <li><a href="/newbuilding/">Новострои</a></li>
+                        <li><a href="/manager/" id="">Менеджеры</a></li>
+                        <li>
+                            <a href="#" id="">О нас</a>
+                            <ol>
+                                <li><a href="/home/about/">О компании</a></li>
+                                <li><a href="/vacancy/">Вакансии агенства</a></li>
+                            </ol>
 
-
-                    </li>
-
-                </ol>
+                        </li>
+                    </ol>
+                </div>
             </div>
-
             <div class="sell">
-                <a href="~/email/index" id="">Хочу продать!</a>
+                <a href="/email/" id=""><div class="sell1"><p>+</p></div><div class="sell2"><p>Хочу продать</p></div></a>
             </div>
         </div>
     </div>
+
     <div class="header_mobile">
         <input type="checkbox" id="hmt" class="hidden-menu-ticker">
         <label class="btn-menu" for="hmt">
@@ -224,42 +217,46 @@
             @RenderBody()
         </div>
         <div class="footer">
-            <div id="toTop"></div>
-            <div class="social">
-                <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
-                <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
-                <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
-                @*<a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>*@
-            </div>
-            <div class="bottomnav">
-                <a href="~/news/index" class="">Новости</a>
-                <a href="~/home/contacts" class="">Контакты</a>
-                <a href="~/map/index" class="">Карта сайта</a>
-                <a href="~/feedback/index" class="">Отзывы</a>
-                @if (Session == null || Session["user"] == null)
-                {
-                    <a class="f" data-dropdown="login-modal" data-options="align:top ignore_repositioning" aria-controls="login-modal" aria-expanded="false" href="/login">Войти</a>
-                    <div class="forms-wrapper">
-                        <div class="form-drop f-dropdown drop-top" tabindex="-1" data-dropdown-content aria-hidden="true" id="login-modal">
-                            <ol class="login">
-                                <li>
-                                    <div class="login">
-                                        <div class="bodyform">
-                                            @Html.Partial("UnregisteredUsers/_loginPartial", new LoginModel())
-                                        </div>
-                                    </div>
-                                </li>
-                            </ol>
-                        </div>
+            <div class="container" id="container">
+                <div class="wrapper-footer">
+                    <div id="toTop">↑</div>
+                    <div class="social">
+                        <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
+                        <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
+                        <a href="https://www.instagram.com/rehouseodessa/" class="gmail" target="_blank"></a>
+                        @*<a href="https://vk.com/rehouseodessastars" class="vk" target="_blank"></a>*@
                     </div>
-                }
-                else
-                {
-                    @Html.ActionLink("Выйти", "logout", "authorize")
-                }
+                    <div class="bottomnav">
+                        <a href="/news/" class="">Новости</a>
+                        <a href="/home/contacts/" class="">Контакты</a>
+                        <a href="/map/" class="">Карта сайта</a>
+                        <a href="/feedback/" class="">Отзывы</a>
+                        @if (Session == null || Session["user"] == null)
+                        {
+                            <a class="f" data-dropdown="login-modal" data-options="align:top ignore_repositioning" aria-controls="login-modal" aria-expanded="false" href="/login">Войти</a>
+                            <div class="forms-wrapper">
+                                <div class="form-drop f-dropdown drop-top" tabindex="-1" data-dropdown-content aria-hidden="true" id="login-modal">
+                                    <ol class="login">
+                                        <li>
+                                            <div class="login">
+                                                <div class="bodyform">
+                                                    @Html.Partial("UnregisteredUsers/_loginPartial", new LoginModel())
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ol>
+                                </div>
+                            </div>
+                        }
+                        else
+                        {
+                            @Html.ActionLink("Выйти", "logout", "authorize")
+                        }
+                    </div>
+
+                </div>
             </div>
         </div>
-    </div>
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
     @Scripts.Render("~/bundles/addtocart")
