--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -169,105 +169,47 @@
         </div>
     </div>
 
-
-
-
-
-
-
-
-
-
-
     <div id="sliderFrame">
         <div id="slider">
-
-            <a class="video" href="http://www.youtube.com/watch?v=P0G_2tiivxE" data-autovideo="1">
-                <b data-src="Content/images/image-slider-11.jpg"></b>
-                <div class="inslider">
-                    <h3>27 жемчужина</h3>
-                    <h4>на каманина</h4>
-                    <h5>срок сдачи 3 квартал 2017</h5>
-                    <p>1 комн. квартра <span>28600$</span></p>
-                    <p>1 комн. квартра <span>28600$</span></p>
-                    <p>1 комн. квартра <span>28600$</span></p>
-                    <button>Подробнее</button>
-                </div>
-            </a>
-
-            <!--<a class="lazyImage" href="~/Content/images/image-slider-2.jpg">
-                <div class="inslider">
-                    <h3>27 жемчужина</h3>
-                    <h4>на каманина</h4>
-                    <h5>срок сдачи 3 квартал 2017</h5>
-                    <p>1 комн. квартра <span>28600$</span></p>
-                    <p>1 комн. квартра <span>28600$</span></p>
-                    <p>1 комн. квартра <span>28600$</span></p>
-                    <button>Подробнее</button>
-                </div>
-                </a>-->
-
-            <div style="display:block!important;">
-                <img src="~/Content/images/image-slider-2.jpg">
-                <div class="inslider">
-                    <h3>27 жемчужина</h3>
-                    <h4>на каманина</h4>
-                    <h5>срок сдачи 3 квартал 2017</h5>
-                    <p>1 комн. квартра <span>2800$</span></p>
-                    <p>1 комн. квартра <span>2600$</span></p>
-                    <p>1 комн. квартра <span>2860$</span></p>
-                    <button>Подробнее</button>
-                </div>
-            </div>
-
-            <a class="video" href="http://www.youtube.com/watch?v=P0G_2tiivxE" data-autovideo="1">
-                <b data-src="Content/images/image-slider-11.jpg"></b>
-                <div class="inslider">
-                    <h3>27 жемчужина</h3>
-                    <h4>на каманина</h4>
-                    <h5>срок сдачи 3 квартал 2017</h5>
-                    <p>1 комн. квартра <span>28600$</span></p>
-                    <p>1 комн. квартра <span>28600$</span></p>
-                    <p>1 комн. квартра <span>28600$</span></p>
-                    <button>Подробнее</button>
-                </div>
-            </a>
-
-
-            <div style="display:block!important;">
-                <img src="~/Content/images/image-slider-2.jpg">
-                <div class="inslider">
-                    <h3>27 жемчужина</h3>
-                    <h4>на каманина</h4>
-                    <h5>срок сдачи 3 квартал 2017</h5>
-                    <p>1 комн. квартра <span>2800$</span></p>
-                    <p>1 комн. квартра <span>2600$</span></p>
-                    <p>1 комн. квартра <span>2860$</span></p>
-                    <button>Подробнее</button>
-                </div>
-            </div>
-
+            @if (ViewBag.SliderParams != null)
+            {
+                foreach (SliderParam slide in ViewBag.SliderParams)
+                {
+                    if (slide.IsVideo)
+                    {
+                        <a class="video" href="@slide.Url" data-autovideo="1">
+                            <b data-src="Content/images/4.png"></b>
+                            <div class="inslider">
+                                <h3>27 жемчужина</h3>
+                                <h4>на каманина</h4>
+                                <h5>срок сдачи 3 квартал 2017</h5>
+                                <p>1 комн. квартра <span>28600$</span></p>
+                                <p>1 комн. квартра <span>28600$</span></p>
+                                <p>1 комн. квартра <span>28600$</span></p>
+                                <button>Подробнее</button>
+                            </div>
+                        </a>
+                    }
+                    else if(!String.IsNullOrEmpty(slide.Url))
+                    {
+                        <div style="display:block!important;">
+                            <img src="@Url.Content(slide.Url)">
+                            <div class="inslider">
+                                <h3>27 жемчужина</h3>
+                                <h4>на каманина</h4>
+                                <h5>срок сдачи 3 квартал 2017</h5>
+                                <p>1 комн. квартра <span>2800$</span></p>
+                                <p>1 комн. квартра <span>2600$</span></p>
+                                <p>1 комн. квартра <span>2860$</span></p>
+                                <button>Подробнее</button>
+                            </div>
+                        </div>
+                    }
+                }
+            }
         </div>
     </div>
 
-
-
-    <!--<a class="lazyImage" href="~/Content/images/image-slider-2.jpg">
-                <div class="inslider">
-                    <h3>27 жемчужина</h3>
-                    <h4>на каманина</h4>
-                    <h5>срок сдачи 3 квартал 2017</h5>
-                    <p>1 комн. квартра <span>28600$</span></p>
-                    <p>1 комн. квартра <span>28600$</span></p>
-                    <p>1 комн. квартра <span>28600$</span></p>
-                    <button>Подробнее</button>
-                </div>
-            </a>-->
-    <!-- <a class="lazyImage" href="~/Content/images/image-slider-2.jpg"><img src="~/Content/images/image-slider-2.jpg"></a>
-     <a class="lazyImage" href="~/Content/images/image-slider-3.jpg"><img src="~/Content/images/image-slider-3.jpg"></a>
-     <a class="lazyImage" href="~/Content/images/image-slider-5.jpg"><img src="~/Content/images/image-slider-5.jpg"></a>
-
-        -->
     <!--  <div class="container" id="container"
 
           <div id="slidebox">
@@ -453,7 +395,8 @@
 
     <script type="text/javascript">
         Share = {
-            vkontakte: function (purl, ptitle, pimg, text) {
+            vkontakte: function (e, purl, ptitle, pimg, text) {
+                e.stopPropagation();
                 url = 'http://vkontakte.ru/share.php?';
                 url += 'url=' + encodeURIComponent(purl);
                 url += '&title=' + encodeURIComponent(ptitle);
@@ -462,15 +405,17 @@
                 url += '&noparse=true';
                 Share.popup(url);
             },
-            facebook: function (purl, ptitle, pimg, text) {
-                url = 'http://www.facebook.com/sharer.php?s=100';
+            facebook: function (e, purl, ptitle, pimg, text) {
+                e.stopPropagation();
+                url = 'https://www.facebook.com/sharer.php?s=100';
                 url += '&p[title]=' + encodeURIComponent(ptitle);
                 url += '&p[summary]=' + encodeURIComponent(text);
                 url += '&p[url]=' + encodeURIComponent(purl);
                 url += '&p[images][0]=' + encodeURIComponent(pimg);
                 Share.popup(url);
             },
-            twitter: function (purl, ptitle) {
+            twitter: function (e, purl, ptitle) {
+                e.stopPropagation();
                 url = 'http://twitter.com/share?';
                 url += 'text=' + encodeURIComponent(ptitle);
                 url += '&url=' + encodeURIComponent(purl);
