--- a/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
@@ -32,8 +32,8 @@
                         <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
                     }
                     <div class="meters">
-                        <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>0 м²</p></div>
-                        <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>0 м²</p></div>
+                        @*<div><img src="~/Content/images/m2.png" height="32" alt="" /><p>0 м²</p></div>
+                        <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>0 м²</p></div>*@
                     </div>
                     <div class="bottom">
                         <div><p class="cost">от @item.Price грн/м²</p></div>
