--- a/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
@@ -33,8 +33,8 @@
                             <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
                         }
                         <div class="meters">
-                            <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>@item.AdvertPropertyValues.FirstOrDefault(x => x.AdvertPropertyId == 3).PropertiesValue м²</p></div>
-                            <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>@item.AdvertPropertyValues.FirstOrDefault(x => x.AdvertPropertyId == 7).PropertiesValue м²</p></div>
+                            <div><img src="/Content/images/m2.png" height="32" alt=""><p>@(item.AdvertPropertyValues.Any(x => x.AdvertPropertyId == 3) ? item.AdvertPropertyValues.FirstOrDefault(x => x.AdvertPropertyId == 3).PropertiesValue : "0") м²</p></div>
+                            <div><img src="/Content/images/m21.png" height="32" alt=""><p>@(item.AdvertPropertyValues.Any(x => x.AdvertPropertyId == 7) ? item.AdvertPropertyValues.FirstOrDefault(x => x.AdvertPropertyId == 7).PropertiesValue : "0") м²</p></div>
                         </div>
                         <div class="bottom">
                             <div><p class="cost">@item.Price $</p></div>
