--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -248,7 +248,7 @@ input:focus:-ms-input-placeholder { color:transparent; transition: 0.8s ease;} /
     position: absolute;
     font-family: ProximaNova;
     top: 18px;
-    left: 284px;
+    margin-left: -239px;
 }
 
     .your_name a {
@@ -1969,7 +1969,7 @@ opacity: .1;}}
             position: absolute;
             z-index: 99999999999;
             margin-left: 224px;
-            margin-top: 100px;
+            margin-top: 70px;
         }
 
         .products .prods h3 {
@@ -2018,7 +2018,13 @@ opacity: .1;}}
     display: flex;
     flex-direction: row;
     position: absolute;
-    bottom: 0;
+    top: 367px;
+    width: 391px;
+    border-top: 1px solid #e5e5f8;
+}
+.products .prods li:hover .bottom {
+    top: 363px;
+    transition: .8s ease;
 }
 .products .prods li .bottom p.cost {
     padding: 25px 0 22px 23px;
@@ -2027,14 +2033,36 @@ opacity: .1;}}
     border-right: none;
 }
 .products .prods li .bottom .share {
-    padding: 18px;
+    padding: 20px;
     border: 1px solid #e5e5f8;
     border-right: none;
+    border-top: none;
+    position: absolute;
+    right: 69px;
 }
 .products .prods li .bottom .like {
-    padding: 18px;
+        padding: 36px;
     border: 1px solid #e5e5f8;
     border-right: none;
+    right: 0;
+    position: absolute;
+    border-top: none;
+    background-image: url(images/star.png);
+    background-repeat: no-repeat;
+    background-size: 32px 32px;
+    background-position: 50%;
+}
+.products .prods li .bottom .liked {
+        padding: 36px;
+    border: 1px solid #e5e5f8;
+    border-right: none;
+    right: 0;
+    position: absolute;
+    border-top: none;
+    background-image: url(images/star-h.png);
+    background-repeat: no-repeat;
+    background-size: 32px 32px;
+    background-position: 50%;
 }
 .products .prods a {
     text-decoration: none;
@@ -3421,6 +3449,17 @@ a[href^=tel] {
     font-weight: 700;
     text-transform: none;
     border:none;
+}
+.selection1 select:hover {
+    color: #114a82;
+    background: url(images/select-h.png) no-repeat 96%;
+    -webkit-transition: .5s ease;
+    transition: .5s ease;
+    color: #f9a320;
+    border-bottom: 1.2px solid #f9a320;
+    border-left: 1.2px solid #f9a320;
+    border-top: 1.2px solid #f9a320;
+    border-right: 1.2px solid #f9a320;
 }
 
 body a, p, button {
